--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Vercel
+name: Pipeline
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
     types: [closed, opened, synchronize, reopened]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       # 1️⃣ Checkout the repository
@@ -19,17 +19,20 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'   # or whatever version your project requires
-          cache: 'npm'          # caches npm dependencies for faster runs
+          node-version: "24" # or whatever version your project requires
+          cache: "npm" # caches npm dependencies for faster runs
 
       # 3️⃣ Install dependencies
       - name: Install dependencies
-        run: npm ci               # or `yarn install` / `pnpm install`
+        run: npm ci # or `yarn install` / `pnpm install`
 
       # 4️⃣ Build the project (skip if Vercel does the build itself)
       - name: Build project
-        run: npm run build       # adjust if you use a different script
-
+        run: npm run build # adjust if you use a different script
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
       # 5️⃣ Deploy to Vercel
       - name: Deploy to Vercel
         if: ${{ github.event.pull_request.merged == true }}
