--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Build project
         run: npm run build # adjust if you use a different script
       
-      - name: Upload build artifact
-        # if: ${{ github.event.pull_request.merged == true }}
-        # uses: actions/upload-artifact@v4
-        # with:
-        #   name: fin2ools-build
-        #   path: dist/
+      # - name: Upload build artifact
+      #   if: ${{ github.event.pull_request.merged == true }}
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: fin2ools-build
+      #     path: dist/
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
